added bannar section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness Club</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/8b5a7466ec.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="bannar-container">
@@ -19,10 +20,27 @@
            <p>Service</p>
            <p>Contact</p>
            <p>About</p>
+           <div class="icon">
+            <i class="fa-solid fa-bars"></i>
+           </div>
         
             </div>
         </nav>
-       
+        <div class="bannar-top">
+       <div class="bannar-context">
+        <h1>Get body in <br> <span class="shape">shape</span> & stay healthy</h1>
+<p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+<button style="background-color: #E6533C;border: none;" class="bannar-btn">Join Club Now!</button>
+<button style="background-color: black;opacity: 0.6; border: 1px solid white;" class="bannar-btn">Download App</button>
+       </div>
+       <div class="bannar-img">
+        <img class="bnr-image" src="images/head.png" alt="">
+<button class="btn-img"><h1>500+</h1>
+<p>Free Workout Videos</p></button>
+<button class="button-two"><div class="round"></div><div class="text"><h3>350+</h3>
+<p>Video tutorial</p></div></button>
+</div>
+       </div>
 
     </header>
     <main>
