added button correction responsive

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             style="background-color: #e6533c; border: none"
             class="bannar-btn"
           >
-            Join Club Now!
+            Join <span class="club">Club</span> Now!
           </button>
           <button
             style="
