--- a/index.html
+++ b/index.html
@@ -36,22 +36,24 @@
             A huge selection of health and fitness content, healthy recipes and
             transformation stories to help you get fit and stay fit!
           </p>
-          <button
-            style="background-color: #e6533c; border: none"
-            class="bannar-btn"
-          >
-            Join <span class="club">Club</span> Now!
-          </button>
-          <button
-            style="
-              background-color: black;
-              opacity: 0.6;
-              border: 1px solid white;
-            "
-            class="bannar-btn"
-          >
-            Download App
-          </button>
+          <div class="btn-top">
+            <button
+              style="background-color: #e6533c; border: none"
+              class="bannar-btn"
+            >
+              Join <span class="club">Club</span> Now!
+            </button>
+            <button
+              style="
+                background-color: black;
+                opacity: 0.6;
+                border: 1px solid white;
+              "
+              class="bannar-btn"
+            >
+              Download App
+            </button>
+          </div>
         </div>
         <div class="bannar-img">
           <img class="bnr-image" src="images/head.png" alt="" />
