--- a/index.html
+++ b/index.html
@@ -71,7 +71,41 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <!-- change your habits -->
+      <section class="change-top">
+        <div class="change-context">
+          <h1>Change Your Habits</h1>
+          <p>
+            We believe fitness should be accessible to everyone, everywhere,
+            regardless of income or <br />
+            access to a gym.
+          </p>
+          <div class="change-img">
+            <div class="image-context">
+              <img class="img-img" src="images/image3.png" alt="" />
+              <h5>Movement</h5>
+              <p>We believe fitness should be accessible to everyone</p>
+            </div>
+            <div class="image-context">
+              <img class="img-img" src="images/image22.png" alt="" />
+              <h5>Time</h5>
+              <p>We believe fitness should be accessible to everyone</p>
+            </div>
+            <div class="image-context">
+              <img class="img-img" src="images/image44.png" alt="" />
+              <h5>Practice</h5>
+              <p>We believe fitness should be accessible to everyone</p>
+            </div>
+            <div class="image-context">
+              <img class="img-img" src="images/imag5.png" alt="" />
+              <h5>Weight Loss</h5>
+              <p>We believe fitness should be accessible to everyone</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
