--- a/index.html
+++ b/index.html
@@ -105,6 +105,30 @@
           </div>
         </div>
       </section>
+      <!-- run section -->
+      <section class="run-top">
+        <div class="run-containar">
+          <div class="run-context">
+            <h1>
+              Run an Extra <br />
+              Mile Easily
+            </h1>
+            <p>
+              We believe fitness should be accessible to everyone, everywhere,
+              regardless of income or access to a gym. With hundreds of
+              professional workouts.
+            </p>
+            <button
+              style="background-color: #e6533c; border: none"
+              class="bannar-btn"
+            >
+              Join Now
+            </button>
+          </div>
+          <div class="run-full-img"></div>
+          <div class="run-img"></div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
