added bmi section

--- a/index.html
+++ b/index.html
@@ -129,6 +129,74 @@
           <div class="run-img"></div>
         </div>
       </section>
+      bmi section
+      <section class="bmi-container">
+        <div class="bmi-heading">
+          <h1>BMI Calculator</h1>
+          <p>
+            We believe fitness should be accessible to everyone, everywhere,
+            regardless of income or access to a gym.
+          </p>
+        </div>
+        <div class="bmi-context">
+          <div class="Calculator-container">
+            <div class="Calculator-chart">
+              <h3>BMI Calculator Chart</h3>
+              <div class="chart-container">
+                <div class="chart-item"><h5>BMI</h5></div>
+                <div class="chart-item"><h5>Weight Status</h5></div>
+                <div class="chart-item"><p>Below 18.5</p></div>
+                <div class="chart-item"><p>Underweight</p></div>
+                <div class="chart-item"><p>18.5 - 24.9</p></div>
+                <div class="chart-item"><p>Healthy</p></div>
+                <div class="chart-item"><p>25.0 - 29.9</p></div>
+                <div class="chart-item"><p>Overweight</p></div>
+
+                <div class="chart-item"><p>30.0 - and Above</p></div>
+                <div class="chart-item"><p>Obese</p></div>
+              </div>
+            </div>
+
+            <div class="bmi-form">
+              <div class="form-context">
+                <h3>Calculate your BMI</h3>
+                <p>
+                  We believe fitness should be accessible to everyone,
+                  everywhere, regardless of income or access to a gym.
+                </p>
+              </div>
+              <div class="bmi-input">
+                <input class="input-item" type="text" placeholder="Height/cm" />
+                <input
+                  style="margin-left: 5px"
+                  class="input-item"
+                  type="text"
+                  placeholder="Weight/kg"
+                />
+                <input class="input-item" type="text" placeholder="Age" />
+
+                <select
+                  style="margin-left: 5px"
+                  class="input-item"
+                  name="Sex"
+                  id="Sex"
+                >
+                  <option value="Sex">Sex</option>
+                </select>
+                <select class="input-factor" name="factor" id="">
+                  <option value="">Select an activity factor</option>
+                </select>
+                <button
+                  style="background-color: #e6533c; border: none"
+                  class="bannar-btn"
+                >
+                  Calculate
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
