added responsive of bmi calculator

--- a/index.html
+++ b/index.html
@@ -173,19 +173,20 @@
                   type="text"
                   placeholder="Weight/kg"
                 />
-                <input class="input-item" type="text" placeholder="Age" />
                 <br />
+                <input class="input-item" type="text" placeholder="Age" />
+
                 <select
                   style="margin-left: 5px"
                   class="input-item"
                   name="Sex"
                   id="Sex"
                 >
-                  <option value="Sex">Sex</option>
-                </select>
+                  <option value="Sex">Sex</option></select
+                ><br />
                 <select class="input-factor" name="factor" id="">
-                  <option value="">Select an activity factor</option>
-                </select>
+                  <option value="">Select an activity factor</option></select
+                ><br />
                 <button
                   style="background-color: #e6533c; border: none"
                   class="bannar-btn"
