added meet part with responsive

--- a/index.html
+++ b/index.html
@@ -198,6 +198,61 @@
           </div>
         </div>
       </section>
+      <!-- meet section -->
+      <section class="meet-container">
+        <div class="meet-context">
+          <h1>Meet Our Team</h1>
+          <p>
+            We believe fitness should be accessible to everyone, everywhere,
+            regardless of income or access to a gym.
+          </p>
+        </div>
+
+        <div class="meet-image-container">
+          <div class="meet-img block-img">
+            <img src="images/trainer1.png" alt="" />
+            <div class="img-text">
+              <h5>Jerome Bell</h5>
+              <p>Trainer</p>
+            </div>
+          </div>
+          <div class="meet-img">
+            <img src="images/trainer2.png" alt="" />
+            <div class="img-text">
+              <h5>Cameron Willi</h5>
+              <p>Trainer</p>
+            </div>
+          </div>
+          <div class="meet-img">
+            <img src="images/trainer3.png" alt="" />
+            <div class="img-text">
+              <h5>Derrel Steward</h5>
+              <p>Trainer</p>
+            </div>
+          </div>
+          <div class="meet-img block-img">
+            <img src="images/trainer4.png" alt="" />
+            <div class="img-text">
+              <h5>Dianne Russell</h5>
+              <p>Trainer</p>
+            </div>
+          </div>
+          <div class="meet-img">
+            <img src="images/trainer5.png" alt="" />
+            <div class="img-text">
+              <h5>Cody Fisher</h5>
+              <p>Trainer</p>
+            </div>
+          </div>
+          <div class="meet-img">
+            <img src="images/trainer6.png" alt="" />
+            <div class="img-text">
+              <h5>Theresa Webb</h5>
+              <p>Trainer</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
