--- a/index.html
+++ b/index.html
@@ -254,6 +254,35 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="footer-container">
+      <div class="footer-main">
+        <div class="footer-fitness">
+          <h1 style="color: #e6533c;"><i>Fitness</h1></i>
+          <p>
+            We believe fitness should be accessible to everyone, everywhere,
+            regardless of income or access to a gym. With hundreds of
+            professional workouts.
+          </p>
+        </div>
+        <div class="footer-service">
+          <h3>Get Started</h3>
+          <li>Service</li>
+          <li>Contact Us</li>
+          <li>Affiliate Program</li>
+          <li>About Us</li>
+        </div>
+        <div class="footer-service">
+          <h3>Get Started</h3>
+          <li>Fitness</li>
+          <li>Platform</li>
+          <li>Workout Libary</li>
+          <li>App Design</li>
+        </div>
+      </div>
+      <div class="footer-line"></div>
+      
+        <p class="footer-last">All right reserved @Fitness 2024</p>
+     
+    </footer>
   </body>
 </html>
