added offer part

--- a/index.html
+++ b/index.html
@@ -253,6 +253,53 @@
           </div>
         </div>
       </section>
+      <!-- challenge-section -->
+       <section class="offer-container">
+        <div class="offer-context">
+          <div>
+            <h1>
+              The Best Program We Offers You
+            </h1>
+          </div>
+          <div class="offer-head">
+            <P>
+              We provide you various kinds of exercise that can make you so strong and can help you to build up a sound body.Various kinds of exercise may be helpful for you.
+            </P>
+          </div>
+
+        </div>
+        <div class="offer-card-container">
+          <div class="dumbell">
+            <div class="p-dum"><img src="icon/icons8-dumbell-64.png" alt="">
+            <h3>Strength Training</h3>
+            <p>Strength training may enhance your quality of life and improve your ability to do everyday activities and your power.</p> </div>
+            <a href="Learn More">Learn More</a>
+          </div>
+          <div class="dumbell building">
+            <div class="p-dum"><img src="icon/icons8-arm-48.png" alt="">
+            <h3>Body Buiding</h3>
+            <p>Bodybuilding is the practice of progressive resistance exercise to build, control, and develop one's muscles via hypertrophy.</p> </div>
+            <a href="Learn More">Learn More</a>
+            </div>
+
+          <div class="dumbell">
+            <div class="p-dum"> <img src="icon/icons8-yoga-60.png" alt="">
+          <h3>Basic Yoga</h3>
+          <p>Yoga develops inner awareness. It focuses your attention on your body's abilities at the present moment.</p> </div>
+          <a href="Learn More">Learn More</a>
+          </div>
+          <div class="dumbell">
+            <div class="p-dum"><img src="icon/run.png" alt="">
+            <h3>Weight Loss</h3>
+            <p>Maintaining a healthy weight could improve your mobility and mood and lower your risk for serious illnesses,you may fit.</p> </div>
+            <a href="Learn More">Learn More</a>
+
+          </div>
+         
+          
+        </div>
+
+       </section>
     </main>
     <footer class="footer-container">
       <div class="footer-main">
