added offer responsive part

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
       <!-- challenge-section -->
        <section class="offer-container">
         <div class="offer-context">
-          <div>
+          <div class="offer-h">
             <h1>
               The Best Program We Offers You
             </h1>
