added play correction of banner

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <p>Free Workout Videos</p>
           </button>
           <button class="button-two">
-            <div class="round"></div>
+            <div class="round"> <div class="play-icon"><i class="fa-solid fa-play"></i></div></div>
             <div class="text">
               <h3>350+</h3>
               <p>Video tutorial</p>
